--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,25 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit
-    rev: v1.14.4
+    rev: v1.18.3
     hooks:
       - id: validate_manifest
+  - repo: https://github.com/PyCQA/pydocstyle
+    rev: 4.0.1
+    hooks:
+      - id: pydocstyle
   - repo: https://github.com/python-modernize/python-modernize
-    rev: "0.7"
+    rev: '0.7'
     hooks:
       - id: python-modernize
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.7
+    rev: 3.7.8
     hooks:
       - id: flake8
         language_version: python3.7
       - id: flake8
         language_version: python2.7
   - repo: https://github.com/ambv/black
-    rev: stable
+    rev: 19.3b0
     hooks:
       - id: black
         language_version: python3.7
