--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,10 @@ repos:
     rev: v1.18.3
     hooks:
       - id: validate_manifest
+  - repo: https://github.com/PyCQA/pydocstyle
+    rev: 4.0.1
+    hooks:
+      - id: pydocstyle
   - repo: https://github.com/python-modernize/python-modernize
     rev: '0.7'
     hooks:
