--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,21 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit
-    rev: v1.20.0
+    rev: v2.6.0
     hooks:
       - id: validate_manifest
   - repo: https://github.com/PyCQA/pydocstyle
-    rev: 5.0.1
+    rev: 5.0.2
     hooks:
       - id: pydocstyle
   - repo: https://github.com/python-modernize/python-modernize
     rev: '0.7'
     hooks:
       - id: python-modernize
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.9
+  - repo: https://github.com/PyCQA/flake8 
+    rev: 3.8.3
     hooks:
       - id: flake8
-        language_version: python3.7
   - repo: https://github.com/ambv/black
     rev: 19.10b0
     hooks:
       - id: black
-        language_version: python3.7
