--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,21 +3,14 @@ executors:
   python3:
     docker:
       - image: circleci/python:3.7
-  python2:
-    docker:
-      - image: circleci/python:2.7
 jobs:
   test_python3:
     executor: python3
     steps:
+      - checkout 
       - run: python3 -m unittest
-  test_python2:
-    executor: python2
-    steps:
-      - run: python2 -m unittest
 
 workflows:
   test:
     jobs:
       - test_python3
-      - test_python2
