--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
     executor: python3
     steps:
       - checkout 
+      - run: pip install -r requirements.txt
       - run: python3 -m unittest
 
 workflows:
