--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2.1
+orbs:
+  codecov: codecov/codecov@1.1.0
 executors:
   python3:
     docker:
@@ -9,8 +11,11 @@ jobs:
     steps:
       - checkout 
       - run: pip install -r requirements.txt
-      - run: python3 -m unittest
-
+      - run: coverage run -m unittest discover
+      - codecov/upload:
+          file: coverage.json
+          token: $CODECOV_TOKEN
+          upload_name: "Spylib-${CIRCLE_SHA1}"
 workflows:
   test:
     jobs:
