--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,22 @@
 version: 2.1
+orbs:
+  codecov: codecov/codecov@1.1.0
 executors:
   python3:
     docker:
       - image: circleci/python:3.7
-  python2:
-    docker:
-      - image: circleci/python:2.7
 jobs:
   test_python3:
     executor: python3
     steps:
-      - run: python3 -m unittest
-  test_python2:
-    executor: python2
-    steps:
-      - run: python2 -m unittest
-
+      - checkout 
+      - run: pip install -r requirements.txt
+      - run: coverage run -m unittest discover
+      - codecov/upload:
+          file: coverage.json
+          token: $CODECOV_TOKEN
+          upload_name: "Spylib-${CIRCLE_SHA1}"
 workflows:
   test:
     jobs:
       - test_python3
-      - test_python2
