--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - checkout 
       - run: pip install -r requirements.txt
       - run: coverage run -m unittest discover
+      - run: coverage json
       - codecov/upload:
           file: /coverage.json
           token: $CODECOV_TOKEN
